[package]
name = "kirath"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
base64 = "0.21"
bs58 = "0.5"
solana-sdk = "1.18"
spl-token = "4.0"
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = { version = "1" }
ed25519-dalek = { version = "1.0", features = ["std"] }
spl-associated-token-account = "2.3"
solana-program = "1.18" 